--- a/EnDojo/Views/Home/Index.cshtml
+++ b/EnDojo/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class=formularioUsuario>
-            <form method="POST" action="result">
+            <form method="POST" action="Result">
                 <div class="datoPersonal">
                     <label for="Nombre" class="estiloLabel">Your Name: </label>
                     <input type="text" name="Nombre" class=cuadroTexto>
