--- a/EnDojo/Views/Home/result.cshtml
+++ b/EnDojo/Views/Home/result.cshtml
@@ -8,7 +8,7 @@
     <body>
         <div class=formularioUsuario>
             <h1>Submitted Info</h1>
-            <form method="GET" action="result">
+            <form method="GET" action="Result">
                 <div class="posicionColumna">
                     <div class="columna">
                         <div class="datoPersonal">
